--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
+    "react-router-dom": "^6.4.1",
     "regenerator-runtime": "0.13.7",
     "styled-components": "5.3.5",
     "tslib": "^2.3.0"
@@ -21,13 +22,16 @@
     "@nrwl/cli": "14.7.11",
     "@nrwl/cypress": "14.7.11",
     "@nrwl/eslint-plugin-nx": "14.7.11",
+    "@nrwl/express": "^14.7.12",
     "@nrwl/jest": "14.7.11",
     "@nrwl/linter": "14.7.11",
+    "@nrwl/node": "14.7.12",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "14.7.11",
     "@nrwl/web": "14.7.11",
     "@nrwl/workspace": "14.7.11",
     "@testing-library/react": "13.4.0",
+    "@types/express": "4.17.13",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@types/react": "18.0.20",
@@ -38,6 +42,7 @@
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "28.1.1",
     "babel-plugin-styled-components": "1.10.7",
+    "cors": "^2.8.5",
     "cypress": "^10.7.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
@@ -46,6 +51,7 @@
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.31.8",
     "eslint-plugin-react-hooks": "4.6.0",
+    "express": "^4.18.1",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "nx": "14.7.11",
