--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   },
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.11.0",
     "core-js": "^3.6.5",
+    "dotenv": "^16.0.2",
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-auth0": "^1.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
