--- a/apps/cruxi/tsconfig.spec.json
+++ b/apps/cruxi/tsconfig.spec.json
@@ -16,7 +16,7 @@
     "**/*.test.jsx",
     "**/*.spec.jsx",
     "**/*.d.ts"
-  ],
+, "../../libs/cruxi-ui/src/lib/Components/AuthSplashScreen/auth-splash-screen.spec.tsx"  ],
   "files": [
     "../../node_modules/@nrwl/react/typings/cssmodule.d.ts",
     "../../node_modules/@nrwl/react/typings/image.d.ts"
